--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
+<a href="#">
+<img src="https://www.easycounter.com/counter.php?dimalidich651"
+border="0" alt="статистика посещения интернет"></a>
+<br><a href="https://www.easycounter.com/">статистика посещений</a>
+
       <p class="m-0 text-center text-white">Права захищені 2020</p>
     </div>
     <!-- /.container -->
