--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-<a href="#">
+<center><a href="#">
 <img src="https://www.easycounter.com/counter.php?dimalidich651"
 border="0" alt="статистика відвідування сторінки"></a>
 
