--- a/index.html
+++ b/index.html
@@ -214,7 +214,10 @@
       </div>
       </div>
   <!-- /.container -->
-<hr>
+<hr>      <div class="col-md-4">
+        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
+      </div>
+  <hr>
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
