--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -79,6 +79,7 @@
         <p>Що важливо в Засвіті?</p>
         <p>По суті тільки два значення:Маскування і Обзор</p>
         <p>Обидва значення не є сталими,їх можливо покращити</p>
+        <p>Маскування можливо покращити двома способами:</p>
       </div>
     </div>
     <!-- /.row -->
