--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -77,8 +77,8 @@
       <div class="col-lg-6">
         <h2>Засвіт</h2>
         <p>Що важливо в Засвіті?</p>
-        <p>По суті тільки два значення:Маскування і Обзор</p>
-        <p>Обидва значення не є сталими,їх можливо покращити</p>
+      <p>  По суті тільки два значення:Маскування і Обзор>.
+        Обидва значення не є сталими,їх можливо покращити</p>
         <p>Маскування можливо покращити двома способами:</p>
       </div>
     </div>
