--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
   <!-- /.container -->
 <hr>       <div class="row mb-4">
       <div class="col-md-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+        <p>Легше буде звязатись))</p>
       </div>
       <div class="col-md-4">
-        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
+        <a class="btn btn-lg btn-secondary btn-block" href="https://docs.google.com/forms/d/e/1FAIpQLSc511MiKeYftUlPLS5NZv3yEQ1ZJ2hNUO5FLlPHaLxqFv-8PQ/viewform?usp=sf_link">Перейти</a>
       </div>
     </div>
 
