--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -77,9 +77,12 @@
       <div class="col-lg-6">
         <h2>Засвіт</h2>
         <p>Що важливо в Засвіті?</p>
-      <p>  По суті тільки два значення:Маскування і Обзор>.
+      <p>  По суті є тільки два значення:Маскування і Обзор.
         Обидва значення не є сталими,їх можливо покращити</p>
         <p>Маскування можливо покращити двома способами:</p>
+       Перший спосіб потребує трохи срібла.Це купити камуфляж і маск.сітку.Але маск.сітка діє через три секунди після повної зупинки,
+якщо ти постійно рухаєшся і нема коли стояти на місці,
+то краще взяти покращений обзор з камуфляжом.Маск.сітка потрібна пт-шкам і деяким лт.
       </div>
     </div>
     <!-- /.row -->
