--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -80,10 +80,16 @@
       <p>  По суті є тільки два значення:Маскування і Обзор.
         Обидва значення не є сталими,їх можливо покращити</p>
         <p>Маскування можливо покращити двома способами:</p>
-       Перший спосіб потребує трохи срібла.Це купити камуфляж і маск.сітку.Але маск.сітка діє через три секунди після повної зупинки,
+       Перший спосіб робиться прямо в ангарі.Це купити камуфляж і маск.сітку.Але маск.сітка діє через три секунди після повної зупинки,
 якщо ти постійно рухаєшся і нема коли стояти на місці,
 то краще взяти покращений обзор з камуфляжом.Маск.сітка потрібна пт-шкам і деяким лт.
-      </div>
+<p>Другий спосіб це прямо в бою.Кусти або повалені дерева дуже добре покращують маскування.
+Звичайний куст покращує маскування на 50%,але максимально можна покращити маскування на 70%,якщо в танка маскування≥30%,
+то засвітити можливо буде тільки ренгеном(менше 50м до танка).Але стріляти з кустів треба вміти, якщо стояти в самих кустах і стріляти,
+то маскування буде пропадати,діло в тім що коли відбувається вистріл всі кусти пропадають на 1мл секунду 
+
+   </p>
+     </div>
     </div>
     <!-- /.row -->
 
