--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -86,8 +86,7 @@
 <p>Другий спосіб це прямо в бою.Кусти або повалені дерева дуже добре покращують маскування.
 Звичайний куст покращує маскування на 50%,але максимально можна покращити маскування на 70%,якщо в танка маскування≥30%,
 то засвітити можливо буде тільки ренгеном(менше 50м до танка).Але стріляти з кустів треба вміти, якщо стояти в самих кустах і стріляти,
-то маскування буде пропадати,діло в тім що коли відбувається вистріл всі кусти пропадають на 1мл секунду 
-
+то маскування буде пропадати,діло в тім що коли відбувається вистріл всі кусти пропадають на 1мл секунду, тебе в результаті за "світять" і понакидують за шивород уронія.Стріляти з кустів треба з 15 метрів від них, тоді вони стають не прозорі,неудобно але безпечно.
    </p>
      </div>
     </div>
