--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -93,8 +93,10 @@
     <!-- /.row -->
 
     <!-- Team Members -->
-    <h2>Our Team</h2>
-
+    <h2>Формула засвіту</h2>
+    Як сервер визначає коли хто має бути засвічений?
+     Сервер вирішує за такою формулою:
+          <a href="#"><img class="card-img-top" src="vendor/img/252Y.jpg" alt=""></a>
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
