--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -104,7 +104,7 @@
     <h2>Габаритні точки</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/points.jpg" alt="">
+        <img class="img-fluid" src="vendor/img/points.webp" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
