--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -80,7 +80,7 @@
       <p>  По суті є тільки два значення:Маскування і Обзор.
         Обидва значення не є сталими,їх можливо покращити</p>
         <p>Маскування можливо покращити двома способами:</p>
-       Перший спосіб робиться прямо в ангарі.Це купити камуфляж і маск.сітку.</p><img class="card-img-top" src="vendor/img/camo.jpg" alt=""></a><img class="card-img-top" src="vendor/img/camonet.jpg" alt=""></a><p>Але маск.сітка діє через три секунди після повної зупинки,
+       Перший спосіб робиться прямо в ангарі.Це купити камуфляж і маск.сітку.</p><img class="card-img-top" src="vendor/img/camo.jpg" alt=""></a><hr><img class="card-img-top" src="vendor/img/camonet.jpg" alt=""></a><p>Але маск.сітка діє через три секунди після повної зупинки,
 якщо ти постійно рухаєшся і нема коли стояти на місці,
 то краще взяти покращений обзор з камуфляжом.Маск.сітка потрібна пт-шкам і деяким лт.
 <p>Другий спосіб це прямо в бою.Кусти або повалені дерева дуже добре покращують маскування.
