--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -82,7 +82,7 @@
         <p>Маскування можливо покращити двома способами:</p>
        Перший спосіб робиться прямо в ангарі.Це купити камуфляж і маск.сітку.</p><img class="card-img-top" src="vendor/img/camo.jpg" alt=""></a><hr><img class="card-img-top" src="vendor/img/camonet.jpg" alt=""></a><p>Але маск.сітка діє через три секунди після повної зупинки,
 якщо ти постійно рухаєшся і нема коли стояти на місці,
-то краще взяти покращений обзор з камуфляжом.Маск.сітка потрібна пт-шкам і деяким лт.
+то краще взяти покращений обзор з камуфляжом.<p><img class="card-img-top" src="vendor/img/optics.jpg" alt=""></a></p>Маск.сітка потрібна пт-шкам і деяким лт.
 <p>Другий спосіб це прямо в бою.Кусти або повалені дерева дуже добре покращують маскування.
 Звичайний куст покращує маскування на 50%,але максимально можна покращити маскування на 70%,якщо в танка маскування≥30%,
 то засвітити можливо буде тільки ренгеном(менше 50м до танка).Але стріляти з кустів треба вміти, якщо стояти в самих кустах і стріляти,
