--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -97,7 +97,7 @@
     Як сервер визначає коли хто має бути засвічений?
      Сервер вирішує за такою формулою:
           <a href="#Формула засвіту"><img class="card-img-top" src="vendor/img/formula.jpg" alt=""></a>
- <p>Показник не замітності різний в різних умовах, наприклад при горінні маскування в двічі падає.Щоб дізнатися яке маскування в русі, при стрільбі і просто стоячи,треба зайти в повні ттх танка та прогорнути до розділу маскування або просто зайти в оборудку та глянути через маск.сітку.</p><img class="card-img-top" src="vendor/img/camonet1.jpg" alt=""></a> 
+ <p>Показник не замітності різний в різних умовах, наприклад при горінні маскування в двічі падає.Щоб дізнатися яке маскування в русі, при стрільбі і просто стоячи,треба зайти в повні ттх танка та прогорнути до розділу маскування або просто зайти в оборудку та глянути через маск.сітку.</p><img class="card-img-top" src="vendor/img/ttx.jpg" alt=""></a> 
     <hr>
      <img class="card-img-top" src="vendor/img/camonet~2.jpg" alt=""></a>
     <!-- /.row -->
