--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -109,10 +109,13 @@
         <img class="img-fluid" src="vendor/img/points.webp" alt="">
       </div>
      Уявимо ситуацію,стали біля стіни так що видно тільки кінчик корми,як нам відомо через непрозорі предмети неможливо засвітити звичайним обзором,можливо тільки ренгеном.
-     Але в такій ситуації нас засвітять через габаритну точку що на кормі.Мало того що нас світять так щей ми нікого не засвітим тому що обзорні точки а це ком.башня і початок гармати, за стіною
+     Але в такій ситуації нас засвітять через габаритну точку що на кормі.Мало того що нас світять так щей ми нікого не засвітим тому що обзорні точки а це ком.башня і початок гармати, за стіною.
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="vendor/img/example.jpg" alt="">
       </div>
+       
+       А що на рахунок практики, нижче буде показано як світить можна а як ні.
+<h2>Не правильно:</h2>
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
       </div>
