--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -117,10 +117,10 @@
        А що на рахунок практики, нижче буде показано як світить можна а як ні.
 <h2>Не правильно:</h2>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="vendor/img/failed1.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="vendor/img/failed2.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
