--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -122,11 +122,18 @@
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="vendor/img/failed2.jpg" alt="">
       </div>
+ <div class="col-lg-2 col-sm-4 mb-4">
+        <img class="img-fluid" src="vendor/img/failed3.jpg" alt="">
+      </div>
+<h2>Правильно</h2>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="vendor/img/winner1.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="vendor/img/winner2.jpg" alt="">
+      </div>
+<div class="col-lg-2 col-sm-4 mb-4">
+        <img class="img-fluid" src="vendor/img/winner3.jpg" alt="">
       </div>
     </div>
     <!-- /.row -->
