--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -134,6 +134,7 @@
       </div>
 <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="vendor/img/winner3.jpg" alt="">
+
       </div>
     </div>
     <!-- /.row -->
@@ -152,7 +153,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <iframe width="1920" height="864" src="https://www.youtube.com/embed/v6TOTzsxGPE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
 </html>
