--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -134,7 +134,7 @@
       </div>
 <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="vendor/img/winner3.jpg" alt="">
-<iframe width="100%" height="360" src="https://www.youtube.com/embed/v6TOTzsxGPE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<hr><iframe width="100%" height="360" src="https://www.youtube.com/embed/v6TOTzsxGPE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       </div>
     </div>
