--- a/lerner-2-col.html
+++ b/lerner-2-col.html
@@ -73,12 +73,11 @@
     <!-- Intro Content -->
     
       <div class="col-lg-6">
-        <h2>Габаритні та обзорні точки</h2>
+        <h2>Для чого обучалка?</h2>
         <div class="row">
       <div class="col-lg-6">
         <img class="img-fluid rounded mb-4" src="https://avatars.mds.yandex.net/get-zen_doc/235144/pub_5d244e538da1ce00acfd8b04_5d2450de4dd76c00ad1b68cd/scale_1200" alt="">
-        <p>Розпочнемо з габаритних точок.І за габаритних точок "світить" противник.Якщо їх ховати за предмети які мають маскувальні властивості ,а саме кусти,дерева та гілля,ці предмети можуть зменшити радіус виявлення твого танка від ворожого "світляка".Габаритні точки знаходяться:на центрі лоба корпуса,по боках,на кормі і ще декілька на башні.Гармата не має габаритних точок,але має основа гармати,тому не варто висовувати більш ніш треба з кустів гармату.Обзорні точки знаходяться на основі гармати та на командирській башні.Функція в обзорних точок така:якщо вистачає обзору "засвітити" габаритні точки противника,то його видно,якщо не вистачає,то невидно.Вираховується це за формулою: </p> <div class="row">
-      <div class="col-lg-6">
+        <p>Часто я зустрічаю таких людей які наче знають що таке танкування,свёт або зручні позиції,але вони не вміють ці знання використовувати.Це так звані раки,вони знають але не знають коли застосовувати,а чому?Тому що практики немає,їм дали теорію а коли застосовувати не знає  </p> <div class="col-lg-6">
         <img class="img-fluid rounded mb-4" src="http://cdn-frm-eu.wargaming.net/wot/ru/uploads/monthly_09_2014/post-85610-0-16160400-1411466372.png" alt=""><p>
         <p>Де k це маскування противника,"обзор" це обзор твого танка.Маскування можна глянуть в ТТХ машини,в різному стані різне маскування,воно залежить від того чи рухається корпус танка,чи стріляє і чи горить танк .Маскування можна прокачать купивши камуфляж та маск.сітку.Також можна прокачать обзор,для цього треба вкачать екіпаш на 100%,та купить амуніцію національну їжу екіпажа</p>
         <p>Про маскувальні предмети, вони додаються до коефіцієнта маскування танка.Густі кущі та дерева додають до маскування 50%,гілля та маленкі кусти 25%</p>
