--- a/lerner-2-col.html
+++ b/lerner-2-col.html
@@ -57,10 +57,9 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">"Свёт"
-    <p>
-      <small>Габаритні та обзорні точки.</small></p>
-     <small>Маскування</small>
+    <h1 class="mt-4 mb-3"
+    Для кого потрібна обучалка?
+   
     </h1>
 
     <ol class="breadcrumb">
@@ -73,10 +72,10 @@
     <!-- Intro Content -->
     
       <div class="col-lg-6">
-        <h2>Для чого обучалка?</h2>
+        <h2>Новачки та раки</h2>
         <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="https://avatars.mds.yandex.net/get-zen_doc/235144/pub_5d244e538da1ce00acfd8b04_5d2450de4dd76c00ad1b68cd/scale_1200" alt="">
+        <img class="img-fluid rounded mb-4" src="https://media-wbp.wgcdn.co/media/filer_public_thumbnails/filer_public/images/7_8_1920x1080.jpg__1048x590_q95_crop_subsampling-2.jpg" alt="">
         <p>Часто я зустрічаю таких людей які наче знають що таке танкування,свёт або зручні позиції,але вони не вміють ці знання використовувати.Це так звані раки,вони знають але не знають коли застосовувати,а чому?Тому що практики немає,їм дали теорію а коли застосовувати не знає  </p> <div class="col-lg-6">
         <img class="img-fluid rounded mb-4" src="http://cdn-frm-eu.wargaming.net/wot/ru/uploads/monthly_09_2014/post-85610-0-16160400-1411466372.png" alt=""><p>
         <p>Де k це маскування противника,"обзор" це обзор твого танка.Маскування можна глянуть в ТТХ машини,в різному стані різне маскування,воно залежить від того чи рухається корпус танка,чи стріляє і чи горить танк .Маскування можна прокачать купивши камуфляж та маск.сітку.Також можна прокачать обзор,для цього треба вкачать екіпаш на 100%,та купить амуніцію національну їжу екіпажа</p>
