--- a/lerner-2-col.html
+++ b/lerner-2-col.html
@@ -58,7 +58,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3"
-    Для кого потрібна обучалка?
+   <p> Для кого потрібна обучалка?</p>
    
     </h1>
 
