--- a/lerner-2-col.html
+++ b/lerner-2-col.html
@@ -196,7 +196,7 @@
         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="https://media-wbp.wgcdn.co/media/filer_public_thumbnails/filer_public/images/7_8_1920x1080.jpg__1048x590_q95_crop_subsampling-2.jpg" alt="">
       </div>
     </div>
     <!-- /.row -->
