--- a/lerner-2-col.html
+++ b/lerner-2-col.html
@@ -76,8 +76,8 @@
         <div class="row">
       <div class="col-lg-6">
         <img class="img-fluid rounded mb-4" src="https://media-wbp.wgcdn.co/media/filer_public_thumbnails/filer_public/images/7_8_1920x1080.jpg__1048x590_q95_crop_subsampling-2.jpg" alt="">
-        <p>Часто я зустрічаю таких людей які наче знають що таке танкування,свёт або зручні позиції,але вони не вміють ці знання використовувати.Це так звані раки,вони знають але не знають коли застосовувати,а чому?Тому що практики немає,їм дали теорію а коли застосовувати не знає  </p> <div class="col-lg-6">
-     
+        <p>Часто я зустрічаю таких людей які наче знають що таке танкування,свёт або зручні позиції,але вони не вміють ці знання використовувати.Це так звані раки,вони знають але не знають коли застосовувати,а чому?Тому що практики немає,їм дали теорію,а коли застосовувати не знають  </p> <div class="col-lg-6">
+     <p>В моїх обучалках буде й практичні прийоми а не теорія, яку треба подумати як застосовувати.</p>
 
   <!-- /.container -->
 
