--- a/lerner-2-col.html
+++ b/lerner-2-col.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Головна</a>
+            <a class="nav-link" href="index.html">Головна</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="news.html">Новини</a>
@@ -66,7 +66,7 @@
       <li class="breadcrumb-item">
         <a href="index.html">Головна</a></a>
       </li>
-      <li class="breadcrumb-item active">"Свёт"</li></li>
+      <li class="breadcrumb-item active">Обучалка</li></li>
     </ol>
 
     <!-- Intro Content -->
