--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Головна</a>
+            <a class="nav-link" href="index.html">Головна</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="news.html">Новини</a>
