--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -57,15 +57,15 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3">
+      Позиції
     </h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
+        <a href="index.html">Головна</a>
       </li>
-      <li class="breadcrumb-item active">About</li>
+      <li class="breadcrumb-item active">Позиції</li>
     </ol>
 
     <!-- Intro Content -->
@@ -74,10 +74,9 @@
         <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
       </div>
       <div class="col-lg-6">
-        <h2>About Modern Business</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+        <h2>Лінії фронту</h2>
+           <p>Є три лінії фронту.Ці лінії потрібно знати щоб приблизно розуміти де який тип техніки має бути.Наприклад пт не може бути на першій лінії,а лт на третій.Так де ті лінії?</p>
+        <p>1-ша лінія фронту це самий центр бою,десь приблизно до 50м від червоних,2-га лінія фронту підтримує першу,це від 50м до 150м,3-тя лінія фронту це ті так звані кустові "криси",вони без наказано закидують уроній, більше 150м</p>
       </div>
     </div>
     <!-- /.row -->
