--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -77,7 +77,8 @@
         <h2>Лінії фронту</h2>
            <p>Є три лінії фронту.Ці лінії потрібно знати щоб приблизно розуміти де який тип техніки має бути.Наприклад пт не може бути на першій лінії,а лт на третій.Так де ті лінії?</p>
         <p>1-ша лінія фронту це самий центр бою,десь приблизно до 50м від червоних,2-га лінія фронту підтримує першу,це від 50м до 150м,3-тя лінія фронту це ті так звані кустові "криси",вони без наказано закидують уроній, більше 150м</p>
-      </div>
+      <p>Яким типам техніки треба бути на різних лініях, звісно кожна карта різна і не може належати одна і та сама тактика всім картам</p>
+     </div>
     </div>
     <!-- /.row -->
 
