--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -77,8 +77,11 @@
         <h2>Лінії фронту</h2>
            <p>Є три лінії фронту.Ці лінії потрібно знати щоб приблизно розуміти де який тип техніки має бути.Наприклад пт не може бути на першій лінії,а лт на третій.Так де ті лінії?</p>
         <p>1-ша лінія фронту це самий центр бою,десь приблизно до 50м від червоних,2-га лінія фронту підтримує першу,це від 50м до 150м,3-тя лінія фронту це ті так звані кустові "криси",вони без наказано закидують уроній, більше 150м</p>
-      <p>Яким типам техніки треба бути на різних лініях, звісно кожна карта різна і не може належати одна і та сама тактика всім картам</p>
-     </div>
+      <p>Яким типам техніки треба бути на різних лініях,звісно кожна карта різна і не може належати одні і ті самі позиції всім картам,але це не означає що це неможливо застосувати.</p>
+   <h2>Тяжким танка</h2>
+    <img class="img-fluid rounded mb-4" src="https://i.pinimg.com/originals/77/2b/ab/772bab98b8a73a5d294c4fe8a794fc66.jpg" alt="ІС-4">
+ <p>ТТ варто бути на першій лінії,і не стояти занадто довго(якщо постійно стояти,та щей на відкритій місцевості,швидко прилетить з кустів бан),зробили вистріл-закатуйтесь назад в укриття,перезарядились-ромбом виїжджайте даєте шот і назад.І так поки не розберете "червоних" ТТ</p>
+  </div>
     </div>
     <!-- /.row -->
 
