--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -80,7 +80,7 @@
       <p>Яким типам техніки треба бути на різних лініях,звісно кожна карта різна і не може належати одні і ті самі позиції всім картам,але це не означає що це неможливо застосувати.</p>
    <h2>Тяжким танка</h2>
     <img class="img-fluid rounded mb-4" src="https://i.pinimg.com/originals/77/2b/ab/772bab98b8a73a5d294c4fe8a794fc66.jpg" alt="ІС-4">
- <p>ТТ варто бути на першій лінії,і не стояти занадто довго(якщо постійно стояти,та щей на відкритій місцевості,швидко прилетить з кустів бан),зробили вистріл-закатуйтесь назад в укриття,перезарядились-ромбом виїжджайте даєте шот і назад.І так поки не розберете "червоних" ТТ</p>
+ <p>ТТ варто бути на першій лінії,і не стояти занадто довго(якщо постійно стояти,та щей на відкритій місцевості,швидко прилетить з кустів бан),зробили вистріл-закатуйтесь назад в укриття,перезарядились-ромбом виїжджайте даєте шот і назад.І так поки не розберете "червоних" ТТ.Тут само собою потрібні навички <a href="lerner-5-col.html"> танкування</a>.</p>
   </div>
     </div>
     <!-- /.row -->
