--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -81,7 +81,10 @@
    <h2>Тяжким танка</h2>
     <img class="img-fluid rounded mb-4" src="https://i.pinimg.com/originals/77/2b/ab/772bab98b8a73a5d294c4fe8a794fc66.jpg" alt="ІС-4">
  <p>ТТ варто бути на першій лінії,і не стояти занадто довго(якщо постійно стояти,та щей на відкритій місцевості,швидко прилетить з кустів бан),зробили вистріл-закатуйтесь назад в укриття,перезарядились-ромбом виїжджайте даєте шот і назад.І так поки не розберете "червоних" ТТ.Тут само собою потрібні навички <a href="lerner-5-col.html"> танкування</a>.</p>
-  </div>
+     <h2>Середнім танкам</h2>
+<img class="img-fluid rounded mb-4" src="https://media-wbp.wgcdn.co/media/filer_public/images/1_0065.jpg" alt="Т-22ср">
+    <p>СТ-це універсальні машини на них можна грати як на 1-ій так і на 3-ій лінії,але переважно грати потрібно з 1-шу по 2-гу лінію.На відміну від ТТ,СТ не можуть похвалитися бронею, броня є тільки в башті тому цим треба використовувати на рельєфі,тобто грати на 1-лінії.Якщо в СТ немає УВН,тоді варто грати в крису, користуватися союзникам,стояти за ними і чекати поки на них хтось з "червоних" не розрядится   </p>
+   </div>
     </div>
     <!-- /.row -->
 
