--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -87,10 +87,9 @@
    <p align="left">СТ-це універсальні машини на них можна грати як на 1-ій так і на 3-ій лінії,але переважно грати потрібно з 1-шу по 2-гу лінію.На відміну від ТТ,СТ не можуть похвалитися бронею, броня є тільки в башті тому цим треба користовуватися на рельєфі,тобто грати на 1-лінії.Якщо в СТ немає УВН,тоді варто грати в крису, користуватися союзникам,стояти за ними і чекати поки на них хтось з "червоних" не розрядится на них (це на 2-ій лінії),а можна обережно підкрастися до пт і там закрутить її </p>
    </p> 
 
-   <h2>Легким танкам
-</h2>
+   <h2>Легким танкам</h2>
 <img class="img-fluid rounded mb-4" src="https://i.ytimg.com/vi/yQq71eiFGxo/sddefault.jpg" alt="BAT-CHAT-25t">
-
+<p>Лт це самий капризний тип техніки,цей тип танків не прощає помилок,щоб подружитися з цим класом техніки треба багато часу.Вся робота Лт полягає засвітити перекатку "червоних" танків,але й самому остатися живим.Лт після вдалого "свёта"на першій лінії, має бути на другій лінії, підтримувати союзників та крутити ворожих пт.Всі лт картоні тому на них треба вміти правильно <a href="lerner-3-col.html" світить </a> </p>
 
 </div>
     </div>
