--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -90,6 +90,8 @@
    <h2>Легким танкам</h2>
 <img class="img-fluid rounded mb-4" src="https://i.ytimg.com/vi/yQq71eiFGxo/sddefault.jpg" alt="BAT-CHAT-25t">
 <p>Лт це самий капризний тип техніки,цей тип танків не прощає помилок,щоб подружитися з цим класом техніки треба багато часу.Вся робота Лт полягає засвітити перекатку "червоних" танків,але й самому остатися живим.Лт після вдалого "свёта"на першій лінії, має бути на другій лінії, підтримувати союзників та крутити ворожих пт.Всі лт картоні тому на них треба вміти правильно <a href="lerner-3-col.html" світить </a> </p>
+<h2>Пт-Сау</h2>
+<img class="img-fluid rounded mb-4" src="https://u.kanobu.ru/editor/images/11/f54cf152-c32e-486b-8bd9-36e3cfb6d440.jpg" alt="Grill 15"
 
 </div>
     </div>
