--- a/lerner-4-col.html
+++ b/lerner-4-col.html
@@ -90,7 +90,7 @@
    <h2>Легким танкам</h2>
 <img class="img-fluid rounded mb-4" src="https://i.ytimg.com/vi/yQq71eiFGxo/sddefault.jpg" alt="BAT-CHAT-25t">
 <p>Лт це самий капризний тип техніки,цей тип танків не прощає помилок,щоб подружитися з цим класом техніки треба багато часу.Вся робота Лт полягає засвітити перекатку "червоних" танків,але й самому остатися живим.Лт після вдалого "свёта"на першій лінії, має бути на другій лінії, підтримувати союзників та крутити ворожих пт.Всі лт картоні тому на них треба вміти правильно <a href="lerner-3-col.html" світить </a> </p>
-https://u.kanobu.ru/editor/images/11/f54cf152-c32e-486b-8bd9-36e3cfb6d440.jpg<img class="img-fluid rounded mb-4" src="https://u.kanobu.ru/editor/images/11/f54cf152-c32e-486b-8bd9-36e3cfb6d440.jpg" alt="Grill 15"
+<img class="img-fluid rounded mb-4" src="https://u.kanobu.ru/editor/images/11/f54cf152-c32e-486b-8bd9-36e3cfb6d440.jpg" alt="Grill 15">
 <p>Пт це самий скучний і важки клас техніки,чого на них так важко грати?Та тому що немає башні,якщо хтось з лт заїде в корму,то єдиний спосіб вижити буде притиснутися кормою до стіни або каменя таким способом ми його витолкнем з корми та розвернемо корпус лобом до нього.Друга причина складності цього типу техніки це те що ми Пт повине постійно стояти в кустах і залежно від того чи будуть підставляться "червоні" чи ні залежить ваше ефективність в бою.На Пт варто грати від 2-ої,3-ої лінії.</p>
 </div>
     </div>
