--- a/lerner-5-col.html
+++ b/lerner-5-col.html
@@ -57,8 +57,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3">Танкування     
     </h1>
 
     <ol class="breadcrumb">
