--- a/lerner-5-col.html
+++ b/lerner-5-col.html
@@ -74,7 +74,7 @@
       </div>
       <div class="col-lg-6">
         <h2>Що таке танкування?</h2>
-        <p>Ось ми підійшли до моєї найулюбленішої теми:танкування.Танкування-це захист вразливих участків броні або блокування урону зарахунок броні.Що це означає?Давайте розберемо елементарний приклад танкування, а саме ромбом.Ось припустимо стоїть КВ-3 прямо </p>
+        <p>Ось ми підійшли до моєї найулюбленішої теми:танкування.Танкування-це захист вразливих участків броні або блокування урону зарахунок броні.Що це означає?Давайте розберемо елементарний приклад танкування, а саме ромбом.Ось припустимо стоїть Tiger I прямо корпусом<img class="img-fluid rounded mb-4" src="vendor/img/Tiger1a.jpg" alt=""> </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
       </div>
