--- a/lerner-5-col.html
+++ b/lerner-5-col.html
@@ -74,8 +74,8 @@
       </div>
       <div class="col-lg-6">
         <h2>Що таке танкування?</h2>
-        <p>Ось ми підійшли до моєї найулюбленішої теми:танкування.Танкування-це захист вразливих участків броні або блокування урону зарахунок броні.Що це означає?Давайте розберемо елементарний приклад танкування, а саме ромбом.Ось припустимо стоїть Tiger I прямо корпусом<img class="img-fluid rounded mb-4" src="vendor/img/Tiger1a.jpg" alt=""> </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
+        <p>Ось ми підійшли до моєї найулюбленішої теми:танкування.Танкування-це захист вразливих участків броні або блокування урону зарахунок броні.Що це означає?Давайте розберемо елементарний приклад танкування, а саме ромбом.Ось припустимо стоїть Tiger I прямо лобом корпуса<img class="img-fluid rounded mb-4" src="vendor/img/Tiger1a.jpg" alt=""> </p>
+        <p>І що ми бачимо НижняЛобоваДеталь на ізі пробивається,таким чином прямо в лоб з аркади можна буде пробити,щоб НЛД не пробивали ми ставимо ромб.<img class="img-fluid rounded mb-4" src="vendor/img/Tiger1b.jpg" alt="">І що ми бачимо,НЛД все червоне,можливо пробить броню лише якщо попадимо в каток і то не кожний гравець не додумається до цього. </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
       </div>
     </div>
