--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
+  <meta name="description" content="Хочеш піднять стату?Тут я буду виставляти обучалки по різним темам для того щоб мати чоткі навички гри.Також тут будуть обзори різних карт та техніки">
+  <meta name="author" content="Dimaly-scorp">
+  <meta name="keywords" content="wot,wotblitz,wot blitz,blitz,вот,вотблиц,блиц,вот блиц,World of Tanks,World of Tanks Blitz,dimaly,dimaly-lemaly,dimaly-srorp,танкі,танки,kavayman,mr.mong,обучалка,КВ,ИС,Танкування,Свет,">
   <title>Dimaly-scorp</title>
 
   <!-- Bootstrap core CSS -->
