--- a/master.html
+++ b/master.html
@@ -76,7 +76,8 @@
       <div class="col-lg-6">
         <h2>Чому ця нагорода така важлива?</h2>
         <p>Майстер це та нагорода,яку для отримання потрібно все вижати з боєвої машини,ти повинен як мінімум нанести "легендарний" урон,"епічно" від танкувать,підпалити баки або підірвати БК .Ось чому Майстра отримати важко, щоб новачкам отримати Майстра, потрібно мати скіл та орієнтуватися в просторі ігри (треба все бачити що робиться на карті)</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
+       <h2>Як отримати?</h2>
+        <p>Зараз розкажу саму механіку отримання майстра.Коли ми в бою тащите за всю тіму,ви отримуєте степіні класності за урон,за танкування.Завдяки тому що гравець отримує легендарні(або епічні) ступені і чим більше їх,то тим більше опита за бій</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
       </div>
     </div>
