--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -114,7 +114,7 @@
         <img class="img-fluid" src="vendor/img/example.jpg" alt="">
       </div>
        
-       А що на рахунок практики, нижче буде показано як світить можна а як ні.
+       <p>А що на рахунок практики, нижче буде показано як світить можна а як ні.</p>
 <h2>Не правильно:</h2>
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="vendor/img/failed1.jpg" alt="">
