--- a/lerner-3-col.html
+++ b/lerner-3-col.html
@@ -70,10 +70,6 @@
     </ol>
 
     <!-- Intro Content -->
-    <div class="row">
-      <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
-      </div>
       <div class="col-lg-6">
         <h2>Засвіт</h2>
         <p>Що важливо в Засвіті?</p>
@@ -82,7 +78,8 @@
         <p>Маскування можливо покращити двома способами:</p>
        Перший спосіб робиться прямо в ангарі.Це купити камуфляж і маск.сітку.</p><img class="card-img-top" src="vendor/img/camo.jpg" alt=""></a><hr><img class="card-img-top" src="vendor/img/camonet.jpg" alt=""></a><p>Але маск.сітка діє через три секунди після повної зупинки,
 якщо ти постійно рухаєшся і нема коли стояти на місці,
-то краще взяти покращений обзор з камуфляжом.<p><img class="card-img-top" src="vendor/img/optics.jpg" alt=""></a></p>Маск.сітка потрібна пт-шкам і деяким лт.
+то краще взяти покращений обзор з камуфляжом.
+<p><img class="card-img-top" src="vendor/img/optics.jpg" alt=""></a></p>Маск.сітка потрібна пт-шкам і деяким лт.
 <p>Другий спосіб це прямо в бою.Кусти або повалені дерева дуже добре покращують маскування.
 Звичайний куст покращує маскування на 50%,але максимально можна покращити маскування на 70%,якщо в танка маскування≥30%,
 то засвітити можливо буде тільки ренгеном(менше 50м до танка).Але стріляти з кустів треба вміти, якщо стояти в самих кустах і стріляти,
@@ -106,34 +103,34 @@
     <h2>Габаритні точки</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/points.webp" alt="">
+        <img class="card-img-top" src="vendor/img/points.webp" alt="">
       </div>
     <p> Уявимо ситуацію,стали біля стіни так що видно тільки кінчик корми,як нам відомо через непрозорі предмети неможливо засвітити звичайним обзором,можливо тільки ренгеном.
      Але в такій ситуації нас засвітять через габаритну точку що на кормі.Мало того що нас світять так щей ми нікого не засвітим тому що обзорні точки а це ком.башня і початок гармати, за стіною.</p>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/example.jpg" alt="">
+        <img class="card-img-top" src="vendor/img/example.jpg" alt="">
       </div>
        
        <p>А що на рахунок практики, нижче буде показано як світить можна а як ні.</p>
 <h2>Не правильно:</h2>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/failed1.jpg" alt="">
+        <img class="card-img-top" src="vendor/img/failed1.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/failed2.jpg" alt="">
+        <img class="card-img-top" src="vendor/img/failed2.jpg" alt="">
       </div>
  <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/failed3.jpg" alt="">
+        <img class="card-img-top" src="vendor/img/failed3.jpg" alt="">
       </div>
 <h2>Правильно</h2>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/winner1.jpg" alt="">
+        <img class="card-img-top" src="vendor/img/winner1.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/winner2.jpg" alt="">
+        <img class="card-img-top" src="vendor/img/winner2.jpg" alt="">
       </div>
 <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="vendor/img/winner3.jpg" alt="">
+        <img class="card-img-top" src="vendor/img/winner3.jpg" alt="">
 <hr><iframe width="100%" height="100%" src="https://www.youtube.com/embed/v6TOTzsxGPE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       </div>
