--- a/lerner-5-col.html
+++ b/lerner-5-col.html
@@ -75,9 +75,12 @@
       <div class="col-lg-6">
         <h2>Що таке танкування?</h2>
         <p>Ось ми підійшли до моєї найулюбленішої теми:танкування.Танкування-це захист вразливих участків броні або блокування урону зарахунок броні.Що це означає?Давайте розберемо елементарний приклад танкування, а саме ромбом.Ось припустимо стоїть Tiger I прямо лобом корпуса<img class="img-fluid rounded mb-4" src="vendor/img/Tiger1a.jpg" alt=""> </p>
-        <p>І що ми бачимо НижняЛобоваДеталь на ізі пробивається,таким чином прямо в лоб з аркади можна буде пробити,щоб НЛД не пробивали ми ставимо ромб.<img class="img-fluid rounded mb-4" src="vendor/img/Tiger1b.jpg" alt="">І що ми бачимо,НЛД все червоне,можливо пробить броню лише якщо попадимо в каток і то не кожний гравець не додумається до цього. </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
-      </div>
+         <p>І що ми бачимо НижняЛобоваДеталь на ізі пробивається,таким чином прямо в лоб з аркади можна буде пробити,щоб НЛД не пробивали ми ставимо ромб.<img class="img-fluid rounded mb-4" src="vendor/img/Tiger1b.jpg" alt="">І ось що,НЛД вся червона,можливо пробить броню лише якщо попадимо в каток і то не кожний гравець не додумається до цього.Також є вид ще одного ромба називається обраним,його можна застосовувати якщо переднє розташування башні через це важко танкувать від борта,або з лобом в формі щучого носа і це виглядає так <img class="img-fluid rounded mb-4" src="vendor/img/is3.jpg" alt=""> для того щоб було безпечніше і зручніше стріляти, варто повернутися до стіни кормою так:<img class="img-fluid rounded mb-4" src="vendor/img/Tiger1a.jpg" alt="">  </p>
+        <h2>Види танкування</h2>
+<p>Є різні види танкування,це все тому що кожен танк по своєму унікальний,і має свої недоліки,ось наприклад Maid і E100 мають подібні башні,їх мінус в тому що їхні башні не рикошетні,і легко пробиваються в щоки </p>
+
+
+     </div>
     </div>
     <!-- /.row -->
 
