--- a/lerner-5-col.html
+++ b/lerner-5-col.html
@@ -86,8 +86,9 @@
 Від арок можна танкувать 
 <img class="img-fluid rounded mb-4" src="vendor/img/T29arka.jpg" alt="">
 Від рельєфу та насипів грунту
-<img class="img-fluid rounded mb-4" src="vendor/img/T29arka.jpg" alt="">
- </p>
+<img class="img-fluid rounded mb-4" src="vendor/img/T29ontop.jpg" alt="">
+ <img class="img-fluid rounded mb-4" src="vendor/img/T29nasyp.jpg" alt="">
+</p>
 
 
      </div>
