--- a/lerner-5-col.html
+++ b/lerner-5-col.html
@@ -89,6 +89,7 @@
 <img class="img-fluid rounded mb-4" src="vendor/img/T29ontop.jpg" alt="">
  <img class="img-fluid rounded mb-4" src="vendor/img/T29nasyp.jpg" alt="">
 </p>
+<p>Класно танкувать від башні, стоїш сибі наносиш урон по кд,і тут "червоні" підуть в раш нате тебе,або загрузять голдовий снаряд казеник,а ще найкращий варіант це з кустів Пт дасть фугасом і буде багато критов.Що потрібно робити щоб цього не було? По-перше викатуватися назад з прострілу після вистрілу,якщо червоному дати так багато часу для того щоб вицілити голдой або просто піти тімой всею на вас, довго ви не проживете.По-друге,мансуйте,це чимось нагадує попередню пораду,постійне часткове викатування з укриття не дасть противнику  </p>
 
 
      </div>
