--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('https://media-wbp.wgcdn.co/media/filer_public/images/Gravity-force_1920x1080.jpg')">
+        <div class="carousel-item" style="background-image: url('vendor/img/ad.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Режим "Гравітація"</h3>
             <p>Що нового?</p>
