--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('vendor/img/ad.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Режим "Гравітація"</h3>
-            <p>Що нового?</p>
+            <h3>Пекло</h3>
+            <p>Я пройшов його і що отримав?</p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('https://i.playground.ru/p/DCii0zk0qL7NvOtphQOcPg.jpeg')">
+        <div class="carousel-item" style="background-image: url('vendor/img/patch8.0.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Операція "Колізей"</h3>
             <p>Відомі нагороди за бойовий пропуск</p>
