--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('vendor/img/patch8.0.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Операція "Колізей"</h3>
-            <p>Відомі нагороди за бойовий пропуск</p>
+            <h3><a href="patch8.0.html">Буде дуже цікаво))</a></h3>
+            
           </div>
         </div>
       </div>
