--- a/master.html
+++ b/master.html
@@ -78,7 +78,9 @@
        <h2>Як отримати?</h2>
         <p>Зараз розкажу саму механіку отримання майстра.Коли ми в бою тащите за всю тіму,ви отримуєте степіні класності за урон,за танкування.Завдяки тому що гравець отримує легендарні(або епічні) ступені і чим більше їх,то тим більше опита за бій, якщо ви не попадаєте в 99% гравців які отримали середній опит і попалися в той один відсоток гравців які отримали вище середнього опита то вас буде Майстер </p>
         <img class="img-fluid rounded mb-4" src="vendor/img/master.jpg" alt="">
-     
+         <h2>Мій реплей👇</h2>
+        <p>Цей реплей на СУ-152</p>
+        
       </div>
     </div>
     <!-- /.row -->
