--- a/index.html
+++ b/index.html
@@ -120,6 +120,29 @@
           </div>
         </div>
       </div>
+<div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="lerner-6-col.html"><img class="card-img-top" src="vendor/img/252Y.jpg" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="lerner-6-col.html">Режим "Реалістичні бої"</a>
+            </h4>
+            <p class="card-text">Що новенького?Мій відгук до режиму<div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="lerner-6-col.html"><img class="card-img-top" src="vendor/img/252Y.jpg" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="lerner-6-col.html">Вицілюваня слабих зон</a>
+            </h4>
+            <p class="card-text">Що таке фальш броня?Що таке критування модулів?Самі найвразливіші модулі</p>
+          </div>
+        </div>
+      </div>
+      </div></p>
+          </div>
+        </div>
+      </div>
+      </div>
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
