--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
           </div>
         </div>
       </div>
+</div>
 <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="lerner-6-col.html"><img class="card-img-top" src="vendor/img/252Y.jpg" alt=""></a>
