--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
        </div>
      <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="lerner-6-col.html"><img class="card-img-top" src="vendor/img/patch8.0.jpg" alt=""></a>
+          <a href="lerner-6-col.html"><img class="card-img-top" src="https://media-wbp.wgcdn.co/media/filer_public/images/realistic-battles_1920x1080_top-bottom.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="lerner-6-col.html">Реалістичні бої</a>
