--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="is-2(1945)"><img class="card-img-top" src="vendor/img/ad.jpg" alt=""></a>
+          <a href="is-2(1945).html"><img class="card-img-top" src="vendor/img/ad.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="lerner-2-col.html">Обзор ІС-2 (1945)</a>
+              <a href="is-2(1945).html">Обзор ІС-2 (1945)</a>
             </h4>
             <p class="card-text">Івентний танк ІС-2,топ?</p>
           </div>
