--- a/is-2(1945).html
+++ b/is-2(1945).html
@@ -63,9 +63,9 @@
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
+        <a href="index.html">Головна</a>
       </li>
-      <li class="breadcrumb-item active">About</li>
+      <li class="breadcrumb-item active">ІС-2(1945)</li>
     </ol>
 
     <!-- Intro Content -->
