--- a/is-2(1945).html
+++ b/is-2(1945).html
@@ -57,8 +57,8 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3">Обзор ІС-2(1945)
+      
     </h1>
 
     <ol class="breadcrumb">
@@ -74,10 +74,10 @@
         <img class="img-fluid rounded mb-4" src="vendor/img/ad.jpg" alt="">
       </div>
       <div class="col-lg-6">
-        <h2>About Modern Business</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+        <h2>Як можна було його отримати?</h2>
+        <p>Можна було отримати в недавньому івенті під назвою "Підтримка з повітря".Проходив він так,вам за результативний бій давали сундуки з різними степенями класності.З контейнерів падали бустери та емблемкі.За ці емблеми можна купити в магазині камуфляж або ІС-2(1945).Разом з танком давалося легендарне камо.Ось таке:</p>
+        <p>Оскільки це тяжкий танк то по логіці він повинен мати броню,так і є,але вразливих участків броні достатньо.Найчастіше вас будуть пробиватися НЛД,в ком.башню і в один участок броні біля гармати,якщо вміти танкувать то в принципі цей танк може справлятись з його назначенням,але треба багато мансувать. </p>
+        <p></p>
       </div>
     </div>
     <!-- /.row -->
